--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.5.0",
+    "chart.js": "^4.4.2",
     "scss": "^0.2.4",
     "vue": "^3.3.4",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
